# BooleanSolver

./: .gitignore  CMakeLists.txt  README.md  flake.nix  test
src/: BooleanProcessor.cpp  BooleanProcessor.hpp  KMapSolver.cpp  KMapSolver.hpp  Utils.cpp  Utils.hpp  main.cpp
